# robot_maze_runner

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
docs/: CONTEXTO_LABO.md  LAB_CHEATSHEET.md  PARTE_A.md  PARTE_B_PROGRESO.md  README.md
maps/: casa_slam.pgm  casa_slam.yaml  laberinto_lab_20260702.pgm  laberinto_lab_20260702.yaml  maze_slam.pgm  maze_slam.yaml
rviz/: lab_replay.rviz  parte_c_mision.rviz  tp_final_base.rviz
scripts/: cone_debug_capture.py  fake_diff_drive.py  gen_search_waypoints.py  goal_nav_client.py  hsv_calibrate.py  hsv_sweep.py  kill_all.sh  lab_live_logger.py  lab_make_report.py  lab_record_all.sh  lab_record_rviz.sh  lab_replay_rviz.sh  lab_viz_markers.py  lidar_fusion_validate.py  mission_monitor.py  mission_view.py  mock_cone_publisher.py  nav.sh  parte_c_env.sh  record_mission.sh  record_nav_debug.sh  rviz_markers.py  rviz_mision.sh  scan_match_validate.py  scan_reframe.py  sim.sh  slam.sh  smoke_chair_obstacle.sh  smoke_cone_detect.sh  smoke_explore.sh  smoke_goal_nav.sh  smoke_goal_nav_client.py  smoke_mission.sh  smoke_nav_matrix.sh  smoke_nav_matrix_client.py  smoke_safe_drive.sh  (+2 more)
src/maze_perception/: package.xml  setup.py
src/maze_perception/launch/: cone_detector.launch.py
src/maze_perception/maze_perception/: blob_extractor.py  cone_detector_node.py  detections.py  hsv_segmenter.py
src/maze_perception/test/: test_blob_extractor.py  test_detections.py  test_hsv_segmenter.py
src/maze_slam/: package.xml  setup.py
src/maze_slam/config/: known_pose_mapping.yaml
src/maze_slam/launch/: fastslam.launch.py  known_pose_mapping.launch.py  mapper.launch.py  slam.launch.py  slam_casa.launch.py  slam_tb4_live.launch.py
src/maze_slam/maze_slam/: __init__.py  _kernels.py  fastslam.py  fastslam_node.py  grid_fastslam.py  grid_mapping.py  known_pose_mapper.py  occupancy_mapper.py  save_map.py  utils.py
src/maze_slam/rviz/: casa.rviz  maze_slam.rviz
src/maze_slam/test/: test_grid_mapping.py
(+144 files in other folders)
